--- a/index.html
+++ b/index.html
@@ -10,31 +10,34 @@
     <title>Calculator</title>
   </head>
   <body>
+    <!--display-->
     <main class="main">
-      <div class="screen"></div>
-      <div class="calc"></div>
+      <div class="display">
+        <div class="screen"></div>
+        <div class="calc"></div>
+      </div>
 
-      <!-- <div class="screen"></div> -->
-      <div class="container">
-        <div class="clear">AC</div>
-        <div class="lan">±</div>
-        <div class="percentage">%</div>
-        <div class="division">÷</div>
-        <div class="seven">7</div>
-        <div class="eight">8</div>
-        <div class="nine">9</div>
-        <div class="multiply">X</div>
-        <div class="four">4</div>
-        <div class="five">5</div>
-        <div class="six">6</div>
-        <div class="subtraction">-</div>
-        <div class="one">1</div>
-        <div class="two">2</div>
-        <div class="three">3</div>
-        <div class="add">+</div>
-        <div class="zero">0</div>
-        <div class="decimal">.</div>
-        <div class="assign">=</div>
+      <!-- BUTTONS -->
+      <div class="calculator-keys">
+        <button class="key-operator">AC</button>
+        <button class="key-operator" data-action="">+/-</button>
+        <button class="key-operator" data-action="percentage">%</button>
+        <button class="yellow-btn" data-action="divide">÷</button>
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button class="yellow-btn" data-action="multiply">&times;</button>
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button class="yellow-btn" data-action="subtract">-</button>
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button class="yellow-btn" data-action="add">+</button>
+        <button class="zero">0</button>
+        <button data-action="decimal">.</button>
+        <button class="yellow-btn" data-action="calculate">=</button>
       </div>
     </main>
   </body>
