--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <!-- BUTTONS -->
       <div class="calculator-keys">
         <button class="key-operator">AC</button>
-        <button class="key-operator" data-action="">+/-</button>
+        <button class="key-operator" data-action="plus/minus">+/-</button>
         <button class="key-operator" data-action="percentage">%</button>
         <button class="yellow-btn" data-action="divide">÷</button>
         <button>7</button>
