--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
         <button class="key-operator" data-action="plus/minus">+/-</button>
         <button class="key-operator" data-action="percentage">%</button>
         <button class="yellow-btn" data-action="divide">÷</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
+        <button class="num_btn">7</button>
+        <button class="num_btn">8</button>
+        <button class="num_btn">9</button>
         <button class="yellow-btn" data-action="multiply">&times;</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
+        <button class="num_btn">4</button>
+        <button class="num_btn">5</button>
+        <button class="num_btn">6</button>
         <button class="yellow-btn" data-action="subtract">-</button>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
+        <button class="num_btn">1</button>
+        <button class="num_btn">2</button>
+        <button class="num_btn">3</button>
         <button class="yellow-btn" data-action="add">+</button>
-        <button class="zero">0</button>
+        <button class="num_btn">0</button>
         <button data-action="decimal">.</button>
         <button class="yellow-btn" data-action="calculate">=</button>
       </div>
