Fixed double decimal issue

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
       <button class="dark-btn">3</button>
       <button class="yellow-btn" data-action="add">+</button>
       <button class="dark-btn">0</button>
-      <button class="dark-btn" data-action="decimal">.</button>
+      <button class="dark-btn decimal">.</button>
       <button class="yellow-btn equal">=</button>
     </div>
   </main>
