--- a/src/index.html
+++ b/src/index.html
@@ -32,13 +32,13 @@
     <!-- BUTTONS -->
     <div class="calculator-keys">
       <button class="light-btn clear">AC</button>
-      <button class="light-btn" data-action="plus/minus">+/-</button>
-      <button class="light-btn" data-action="percentage">%</button>
-      <button class="yellow-btn" data-action="divide">÷</button>
+      <button class="light-btn negate" data-action="plus/minus">+/-</button>
+      <button class="light-btn percentage" data-action="percentage">%</button>
+      <button class="yellow-btn" data-action="divide">/</button>
       <button class="dark-btn">7</button>
       <button class="dark-btn">8</button>
       <button class="dark-btn">9</button>
-      <button class="yellow-btn" data-action="multiply">&times;</button>
+      <button class="yellow-btn" data-action="multiply">*</button>
       <button class="dark-btn">4</button>
       <button class="dark-btn">5</button>
       <button class="dark-btn">6</button>
@@ -50,7 +50,7 @@
       <button class="dark-btn">0</button>
       <button class="dark-btn decimal">.</button>
       <button class="yellow-btn equal">=</button>
-    </div>
+    </div> 
   </main>
   <script type="text/javascript" src="./script.js"></script>
 </body>
