--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./src/styles.css">
 
   <title>Calculator</title>
 </head>
@@ -52,7 +52,7 @@
       <button class="yellow-btn equal">=</button>
     </div> 
   </main>
-  <script type="text/javascript" src="./script.js"></script>
+  <script type="text/javascript" src="./src/script.js"></script>
 </body>
 
 </html>
