Calculator History Board added and also edited the README file

--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
           <a href="./src/extend.calc.html">
             <img src="/assets/images/maximize.svg" alt="" class="max" />
           </a>
-          <img src="/assets/images/file-text.svg" alt="" />
+          <div class="history">
+            <img src="/assets/images/file-text.svg" alt="" />
+          </div>
         </div>
+
         <div class="delete">
           <img src="/assets/images/delete.svg" alt="" />
         </div>
@@ -53,6 +56,13 @@
         <button class="yellow-btn equal">=</button>
       </div>
     </main>
+    <!-- Calculator History Board -->
+    <div class="calc-history">
+      <span>Calculation History</span>
+      <hr />
+      <div class="calc-history-box"></div>
+      <div class="progress"></div>
+    </div>
     <script type="text/javascript" src="./src/script.js"></script>
   </body>
 </html>
